@@ -1,3 +1,5 @@
+2006/2/12 -- released version 20060212_trunk
+
 2006/2/11 -- released version 20060211_trunk
 
 2006/2/10 -- released version 20060210_trunk
